--- a/XGBoost - over_sampling.ipynb
+++ b/XGBoost - over_sampling.ipynb
@@ -263,28 +263,19 @@
     "\n",
     "    one_hot_valid_Y = one_hot(valid_Y)\n",
     "    \n",
-    "    for est in params['n_estimators']:\n",
-    "        for lr in params['learning_rate']:\n",
-    "            for col in params['colsample_bytree']:\n",
-    "                for gam in params['gamma']:\n",
-    "                    for sub in params['subsample']:\n",
-    "                        for lam in params['reg_lambda']:\n",
-    "                            \n",
-    "                            clf = XGBClassifier(learning_rate=lr, n_estimators=est, colsample_bytree=col, gamma=gam,\n",
+    "    param_combinations = product(*params.values())\n",
+    "    for est, lr, col, gam, sub, lam in param_combinations:\n",
+    "        clf = XGBClassifier(learning_rate=lr, n_estimators=est, colsample_bytree=col, gamma=gam,\n",
     "                                                subsample=sub, reg_lambda=lam, random_state=42)\n",
-    "                            \n",
-    "                            clf.fit(train_X, train_Y)\n",
-    "                            pred = clf.predict(valid_X)\n",
-    "                            prob = clf.predict_proba(valid_X)\n",
+    "        clf.fit(train_X, train_Y)\n",
+    "        pred = clf.predict(valid_X)\n",
+    "        prob = clf.predict_proba(valid_X)\n",
     "\n",
-    "                            acc = accuracy_score(valid_Y, pred)\n",
-    "                            auc = roc_auc_score(one_hot_valid_Y, prob)\n",
-    "                            para = str(est)+', '+str(lr)+', '+str(col)+', '+str(gam)+', '+str(sub)+ ', '+str(lam)\n",
-    "                            # para = [est, lr, col, gam, sub, lam]\n",
+    "        acc = accuracy_score(valid_Y, pred)\n",
+    "        auc = roc_auc_score(one_hot_valid_Y, prob)\n",
+    "        para = [est, lr, col, gam, sub, lam]\n",
     "\n",
-    "                            history['val_acc'].append(acc)\n",
-    "                            history['val_auc'].append(auc)\n",
-    "                            history['para'].append(para)\n",
+    "        [history[key].append(value) for key, value in zip(['val_acc', 'val_auc', 'para'], [acc, auc, para])]\n",
     "                            \n",
     "    foldperf['fold{}'.format(fold+1)] = history  "
    ]
